Bootstrap format added + Database Schema + Database Configuration Options

--- a/app/Resources/views/todo/delete.html.twig
+++ b/app/Resources/views/todo/delete.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <a href="/" class="btn btn-default">Back</a>
-     <h2 class="page-header">Create Todo</h2>
+     <h2 class="page-header">Delete Todo</h2>
 {% endblock %}
