--- a/app/Resources/views/todo/details.html.twig
+++ b/app/Resources/views/todo/details.html.twig
@@ -1,1 +1,5 @@
-TODO DETAILS
+{% extends 'base.html.twig' %}
+{% block body %}
+    <a href="/" class="btn btn-default">Back</a>
+    <h2 class="page-header">Details Todo</h2>
+{% endblock %}
