--- a/app/Resources/views/todo/details.html.twig
+++ b/app/Resources/views/todo/details.html.twig
@@ -1,5 +1,14 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <a href="/" class="btn btn-default">Back</a>
-    <h2 class="page-header">Details Todo</h2>
+    <hr>
+    <h2 class="page-header">{{todo.name}}</h2>
+    <ul class="list-group">
+        <li class="list-group-item">Category: {{todo.category}}</li>
+        <li class="list-group-item">Priority: {{todo.priority}}</li>
+        <li class="list-group-item">Due: <strong>{{todo.dueDate | date('F j, Y, g:i a')}}</strong></li>
+    </ul>
+    <p>
+        {{todo.description}}
+    </p>
 {% endblock %}
