--- a/app/Resources/views/todo/index.html.twig
+++ b/app/Resources/views/todo/index.html.twig
@@ -8,6 +8,8 @@
                     <tr> 
                         <th>#</th> 
                         <th>Todo</th> 
+                        <th>Category</th> 
+                        <th>Priority</th> 
                         <th>Due Date</th> 
                         <th></th> 
                     </tr> 
@@ -17,10 +19,12 @@
                     <tr> 
                         <th scope="row">{{todo.id}}</th> 
                         <td>{{todo.name}}</td> 
+                        <td>{{todo.category}}</td>
+                        <td>{{todo.priority}}</td>  
                         <td>{{todo.dueDate|date('F j, Y, g:i a')}}</td> 
                         <td>
                             <a href="/todo/details/{{todo.id}}" class="btn btn-success">View</a>
-                            <a href="/todo/edit/{{todo.id}}" class="btn btn-warning">Edit</a>
+                            <a href="/todo/edit/{{todo.id}}" class="btn btn-default">Edit</a>
                             <a href="/todo/delete/{{todo.id}}" class="btn btn-danger">Delete</a>
                         </td> 
                     </tr> 
